# toolchains

./: .gitignore  .gn  BUILD.gn  Readme.md  build.bat  build.py  build.sh  cross-compiling.txt  hello.cc  run_helper.gni  test_script.py
cammond/include/: exec.h
cammond/src/: exec.c
command/: BUILD.gn
command/include/: exec.h
command/src/: exec.c
golangs/: hello.c  main.go
tutorial/: tutorial.cc
