# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#import("//run_helper.gni")

executable("hello") {
  include_dirs = [ "command/include" ]

  sources = [ "hello.cc" ]

  deps = [
    "command:exec_shared",
    ":hello_shared",
    ":hello_static",
  ]
}

shared_library("hello_shared") {
  sources = [
    "hello_shared.cc",
    "hello_shared.h",
  ]

  defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("hello_static") {
  sources = [
    "hello_static.cc",
    "hello_static.h",
  ]
}

#host_run_action("myhello"){
#  target_name = "hello"
#  deps=[]
#}

#action("myhello") {
#    testonly = true
##    _target_name_ = "${target_name}"
#    _target_name_ = ":hello"
#    #        deps = [ ":${_target_name_}" ]
#    #        _run_path_ = "$output_dir/${_target_name_}"
#
#    args = [
#        "//out/hello"
#    ]
#    script = "test_script.py"
#
#    #        inputs = [
#    #            "//out/${_target_name_}",
#    #        ]
#    outputs = [ "//out/${_target_name_}.log" ]
#}