# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

#executable("hello") {
#    sources = [ "hello.cc" ]
#
#    deps = [
#        ":hello_shared",
#        ":hello_static",
#    ]
#}

shared_library("exec_shared") {
    include_dirs = [ "include" ]
    sources = [
        "src/exec.c",
    ]

    defines = [ "HELLO_SHARED_IMPLEMENTATION" ]
}

static_library("exec_static") {
    include_dirs = [ "include" ]
    sources = [
       "src/exec.c",
   ]
}
